@@ -35,12 +35,9 @@ public class LaunchOptions implements Serializable {
     private String versionType;
     private String profileName;
     private final List<String> gameArguments = new ArrayList<>();
-    private final List<String> overrideJavaArguments = new ArrayList<>();
     private final List<String> javaArguments = new ArrayList<>();
-    private final List<String> javaAgents = new ArrayList<>(0);
     private Integer minMemory;
     private Integer maxMemory;
-    private Integer metaspace;
     private Integer width;
     private Integer height;
     private String serverIp;
@@ -48,6 +45,8 @@ public class LaunchOptions implements Serializable {
     private boolean vulkanDriverSystem;
     private boolean pojavBigCore;
     private Renderer renderer;
+    private String uuid;
+    private boolean debugLog;
 
     /**
      * The game directory
@@ -95,24 +94,11 @@ public class LaunchOptions implements Serializable {
     }
 
     /**
-     * The highest priority JVM arguments (overrides the version setting)
-     */
-    @NotNull
-    public List<String> getOverrideJavaArguments() {
-        return Collections.unmodifiableList(overrideJavaArguments);
-    }
-
-    /**
      * User custom additional java virtual machine command line arguments.
      */
     @NotNull
     public List<String> getJavaArguments() {
         return Collections.unmodifiableList(javaArguments);
-    }
-
-    @NotNull
-    public List<String> getJavaAgents() {
-        return Collections.unmodifiableList(javaAgents);
     }
 
     /**
@@ -127,15 +113,6 @@ public class LaunchOptions implements Serializable {
      */
     public Integer getMaxMemory() {
         return maxMemory;
-    }
-
-    /**
-     * The maximum metaspace memory that the JVM can allocate.
-     * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
-     * Containing class instances.
-     */
-    public Integer getMetaspace() {
-        return metaspace;
     }
 
     /**
@@ -184,49 +161,20 @@ public class LaunchOptions implements Serializable {
         return renderer;
     }
 
+    public String getUuid() {
+        return uuid;
+    }
+
+    public boolean isDebugLog() {
+        return debugLog;
+    }
+
     public static class Builder {
 
         private final LaunchOptions options = new LaunchOptions();
 
         public LaunchOptions create() {
             return options;
-        }
-
-        /**
-         * The game directory
-         */
-        public File getGameDir() {
-            return options.gameDir;
-        }
-
-        /**
-         * The Java Environment that Minecraft runs on.
-         */
-        public JavaVersion getJava() {
-            return options.java;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use the id of launch version.
-         */
-        public String getVersionName() {
-            return options.versionName;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use Version.versionType.
-         */
-        public String getVersionType() {
-            return options.versionType;
-        }
-
-        /**
-         * Don't know what the hell this is.
-         */
-        public String getProfileName() {
-            return options.profileName;
         }
 
         /**
@@ -237,87 +185,12 @@ public class LaunchOptions implements Serializable {
         }
 
         /**
-         * The highest priority JVM arguments (overrides the version setting)
-         */
-        public List<String> getOverrideJavaArguments() {
-            return options.overrideJavaArguments;
-        }
-
-        /**
          * User custom additional java virtual machine command line arguments.
          */
         public List<String> getJavaArguments() {
             return options.javaArguments;
         }
 
-        public List<String> getJavaAgents() {
-            return options.javaAgents;
-        }
-
-        /**
-         * The minimum memory that the JVM can allocate.
-         */
-        public Integer getMinMemory() {
-            return options.minMemory;
-        }
-
-        /**
-         * The maximum memory that the JVM can allocate.
-         */
-        public Integer getMaxMemory() {
-            return options.maxMemory;
-        }
-
-        /**
-         * The maximum metaspace memory that the JVM can allocate.
-         * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
-         * Containing class instances.
-         */
-        public Integer getMetaspace() {
-            return options.metaspace;
-        }
-
-        /**
-         * The initial game window width
-         */
-        public Integer getWidth() {
-            return options.width;
-        }
-
-        /**
-         * The initial game window height
-         */
-        public Integer getHeight() {
-            return options.height;
-        }
-
-        /**
-         * The server ip that will connect to when enter game main menu.
-         */
-        public String getServerIp() {
-            return options.serverIp;
-        }
-
-        /**
-         * BE Gesture
-         */
-        public boolean isBeGesture() {
-            return options.beGesture;
-        }
-
-        /**
-         * vulkanDriverSystem
-         */
-        public boolean isVKDriverSystem() {
-            return options.vulkanDriverSystem;
-        }
-
-        /**
-         * Renderer
-         */
-        public Renderer getRenderer() {
-            return options.renderer;
-        }
 
         public Builder setGameDir(File gameDir) {
             options.gameDir = gameDir;
@@ -350,21 +223,9 @@ public class LaunchOptions implements Serializable {
             return this;
         }
 
-        public Builder setOverrideJavaArguments(List<String> overrideJavaArguments) {
-            options.overrideJavaArguments.clear();
-            options.overrideJavaArguments.addAll(overrideJavaArguments);
-            return this;
-        }
-
         public Builder setJavaArguments(List<String> javaArguments) {
             options.javaArguments.clear();
             options.javaArguments.addAll(javaArguments);
-            return this;
-        }
-
-        public Builder setJavaAgents(List<String> javaAgents) {
-            options.javaAgents.clear();
-            options.javaAgents.addAll(javaAgents);
             return this;
         }
 
@@ -375,11 +236,6 @@ public class LaunchOptions implements Serializable {
 
         public Builder setMaxMemory(Integer maxMemory) {
             options.maxMemory = maxMemory;
-            return this;
-        }
-
-        public Builder setMetaspace(Integer metaspace) {
-            options.metaspace = metaspace;
             return this;
         }
 
@@ -415,6 +271,16 @@ public class LaunchOptions implements Serializable {
 
         public Builder setPojavBigCore(boolean pojavBigCore) {
             options.pojavBigCore = pojavBigCore;
+            return this;
+        }
+
+        public Builder setUUid(String uuid) {
+            options.uuid = uuid;
+            return this;
+        }
+
+        public Builder setDebugLog(boolean debugLog) {
+            options.debugLog = debugLog;
             return this;
         }
 
